//Scripts de clase - Marzo 6 de 2024
//Curso de Tópicos Avanzados de base de datos - UPB 202410
//Juan Dario Rodas - juand.rodasm@upb.edu.co

//Proyecto: Atlas de Frutas Colombianas
// Especificación en DBML del modelo de datos

Table "core"."departamentos" {
  "id" varchar(2) [pk, note: 'id del departamento según DIVIPOLA']
  "nombre" varchar(60) [unique, not null, note: 'Nombre del departamento']
  Note: 'Departamentos del país'
}

Table "core"."municipios" {
  "id" varchar(10) [pk, note: 'id del municipio según DIVIPOLA']
  "nombre" varchar(100) [not null, note: 'Nombre del municipio']
  "departamento_id" varchar(2) [not null, note: 'id del departamento asociado al municipio']

Indexes {
  (nombre, departamento_id) [unique, name: "municipio_departamento_uk"]
}
  Note: 'Municipios del pais'
}

Ref:"core"."departamentos"."id" < "core"."municipios"."departamento_id"


Table "core"."frutas" {
  "id" integer [pk, increment, note: 'id de la fruta']
  "nombre" varchar(100) [unique, not null, note: 'Nombre de la fruta']
  "url_wikipedia" varchar(500) [not null, note: 'URL en Wikipedia de la fruta']
  "url_imagen" varchar(500) [not null, note: 'URL de la imagen en Wikipedia de la fruta']
  Note: 'Frutas de Colombia'
}

Table "core"."reinos" {
  "id" integer [pk, increment, note: 'id del reino']
  "nombre" varchar(100) [unique, not null, note: 'nombre del reino']
  Note: 'Reinos en la clasificación botánica'
}

Table "core"."divisiones" {
  "id" integer [pk, increment, note: 'id de la división']
  "nombre" varchar(100) [unique, not null, note: 'nombre de la división']
  "reino_id" integer [not null, note: 'ID del reino al que pertenece la división']
  Note: 'Divisiones en la clasificación botánica'
}

Table "core"."clases" {
  "id" integer [pk, increment, note: 'id de la clase']
  "nombre" varchar(100) [unique, not null, note: 'nombre de la clase']
  "division_id" integer [not null, note: 'ID de la división al que pertenece la clase']
  Note: 'Clases en la clasificación botánica'
}

Table "core"."ordenes" {
  "id" integer [pk, increment, note: 'id del orden']
  "nombre" varchar(100) [unique, not null, note: 'nombre del orden']
  "clase_id" integer [not null, note: 'ID de la clase al que pertenece el orden']
  Note: 'Ordenes en la clasificación botánica'
}

Table "core"."familias" {
  "id" integer [pk, increment, note: 'id de la familia']
  "nombre" varchar(100) [unique, not null, note: 'nombre de la familia']
  "orden_id" integer [not null, note: 'ID del orden al que pertenece la familia']
  Note: 'Familias en la clasificación botánica'
}

Table "core"."generos" {
  "id" integer [pk, increment, note: 'id del género']
  "nombre" varchar(100) [unique, not null, note: 'nombre del género']
  "familia_id" integer [not null, note: 'ID de la familia al que pertenece el género']
  Note: 'Géneros en la clasificación botánica'
}

Table "core"."especies" {
  "id" integer [pk, increment, note: 'id de la especie']
  "nombre" varchar(100) [unique, not null, note: 'nombre de la especie']
  "genero_id" integer [not null, note: 'ID del genero al que pertenece la especie']
  Note: 'Especies en la clasificación botánica'
}

Table "core"."taxonomia_frutas" {
  "especie_id" integer [not null, note: 'Especie taxonómica a la que pertenece la fruta']
  "fruta_id" integer [not null, note: 'Id de la fruta']
  
Indexes {
  (fruta_id, especie_id) [pk, name: "taxonomia_frutas_pk"]
}
  Note: 'Relación de la fruta con su clasificación taxonómica'
}

Ref:"core"."reinos"."id" < "core"."divisiones"."reino_id"
Ref:"core"."divisiones"."id" < "core"."clases"."division_id"
Ref:"core"."clases"."id" < "core"."ordenes"."clase_id"
Ref:"core"."ordenes"."id" < "core"."familias"."orden_id"
Ref:"core"."familias"."id" < "core"."generos"."familia_id"
Ref:"core"."generos"."id" < "core"."especies"."genero_id"
Ref:"core"."frutas"."id" - "core"."taxonomia_frutas"."fruta_id"
Ref:"core"."especies"."id" - "core"."taxonomia_frutas"."especie_id"

Table "core"."climas" {
  "id" integer [pk, increment, note: 'id del clima']
  "nombre" varchar(50) [unique, not null, note: 'nombre del clima']
  "altura_minima" integer [note: 'Altitud mínima del piso térmico']
  "altura_maxima" integer [note: 'Altitud máxima del piso térmico']
  Note: 'Climas donde se producen las frutas'
}

Table "core"."epocas" {
  "id" integer [pk, increment, note: 'id de la época']
  "nombre" varchar(50) [unique, not null, note: 'nombre de la época']
  "mes_inicio" integer [note: 'Mes inicial de la época de producción']
  "mes_final" integer [note: 'Mes final de la época de producción']
  Note: 'épocas cuando se producen las frutas'
}

Table "core"."produccion_frutas" {
  "fruta_id" integer [not null, note: 'Id de la fruta']
  "clima_id" integer [not null, note: 'Id del clima']
  "epoca_id" integer [not null, note: 'Id de la época']    
  "municipio_id" varchar(10) [not null, note: 'Id del municipio']  
  
Indexes {
  (fruta_id, clima_id, epoca_id, municipio_id) [pk, name: "produccion_frutas_pk"]
}
  Note: 'Relación de la fruta con su producción'
}

Ref:"core"."frutas"."id" < "core"."produccion_frutas"."fruta_id"
Ref:"core"."climas"."id" < "core"."produccion_frutas"."clima_id"
Ref:"core"."epocas"."id" < "core"."produccion_frutas"."epoca_id"  
Ref:"core"."municipios"."id" < "core"."produccion_frutas"."municipio_id"

table "core"."nutricion_frutas"{
"fruta_id" integer [not null, note: 'Id de la fruta']
"carbohidratos" float [not null, note: 'Contenido en gr de carbohidratos'] 
"azucares" float [not null, note: 'Contenido en gr de azúcares'] 
"proteina" float [not null, note: 'Contenido en gr de proteinas'] 
"grasas" float [not null, note: 'Contenido en gr de grasas'] 
Note: 'Valores nutricionales de la fruta por cada 100 gr' 
}

Ref:"core"."frutas"."id" - "core"."nutricion_frutas"."fruta_id"